# octopilot-mcp

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Justfile  NOTICE  README.md  fly.toml  install.sh  pyproject.toml  skaffold.yaml
.github/workflows/: ci.yml  deploy-mcp.yml  release.yml
site/: index.html  package-lock.json  package.json
site/public/: CNAME  llms.txt
site/src/: main.js  main.ts
src/octopilot_mcp/: __init__.py  server.py  server_hosted.py
src/octopilot_mcp/tools/: actions.py  detect.py  generate.py  op_runner.py
tests/: test_actions.py  test_detect.py  test_detect_extended.py  test_generate.py  test_generate_extended.py  test_op_runner.py
