[project]
name = "octopilot-mcp"
version = "0.1.0"
description = "MCP server for Octopilot CI/CD toolchain — enables AI agents to detect, generate, and run CI pipelines"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
docker = ["docker>=7.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
octopilot-mcp = "octopilot_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/octopilot_mcp"]
