[project]
name = "octopilot-mcp"
version = "0.1.0"
description = "MCP server for Octopilot CI/CD toolchain — enables AI agents to detect, generate, and run CI pipelines"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
docker = ["docker>=7.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]
# hosted: extras for the public HTTP server on mcp.octopilot.app
# uvicorn is included explicitly so the Dockerfile doesn't need an extra install step
hosted = ["uvicorn[standard]>=0.30", "starlette>=0.40"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in default args
    "N806",   # variable in function should be lowercase (conflicts with some patterns)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S",    # bandit — security warnings not meaningful in test code
    "N802", # function name should be lowercase (pytest fixtures use uppercase ok)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[project.scripts]
octopilot-mcp        = "octopilot_mcp.server:main"          # local stdio (full suite)
octopilot-mcp-hosted = "octopilot_mcp.server_hosted:main"   # hosted HTTP (stateless only)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/octopilot_mcp"]

# Include the install script and bundled data files in the wheel.
# install.sh is served from mcp.octopilot.app/install and bundled so the
# package is fully self-contained.
[tool.hatch.build.targets.wheel.shared-data]

[tool.hatch.build.targets.wheel.sources]
"src" = "src"

[tool.hatch.build.force-include]
"src/octopilot_mcp/data" = "octopilot_mcp/data"
